--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -23,7 +23,7 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 1.5rem;
 }
 
 /* Header */
@@ -96,7 +96,7 @@ body {
   .harmburger {
     display: block;
     position: absolute;
-    top: 3.1rem;
+    top: 8.2%;
     left: 90%;
   }
 
